--- a/Backend/package.json
+++ b/Backend/package.json
@@ -17,6 +17,7 @@
     "express-validator": "^6.4.0",
     "helmet": "^3.22.0",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.9.6",
     "mongoose-autopopulate": "^0.12.0"
   }
 }
